tests/custom-5.1.1/compliant/kyverno-test.yaml
apiVersion: cli.kyverno.io/v1alpha1
kind: Test
metadata:
  name: custom-5.1.1-compliant
policies:
  - ../../../kyverno-policies/custom-5.1.1.yaml
resources:
  - pod.yaml
results:
  - policy: custom-5-1-1-image-scanning
    rule: check-image-scanning
    resources:
      - compliant-pod
    kind: Pod
    result: pass
